--- a/index3.html
+++ b/index3.html
@@ -80,6 +80,7 @@
                 success: function(data) {
                     console.log(data)
                     that.list = data
+                    that.drowRight()
                     setInterval(function(){
                         that.drowRight()
                    },5000)
