--- a/index3.html
+++ b/index3.html
@@ -146,7 +146,7 @@
             console.log(apartmentYear0,apartmentData0)
             option3= {
                 title: {
-                    text: '一级部门参训数据',
+                    text: filterapartment[0],
                     left: 'center'
                 },
                 tooltip: {
@@ -189,7 +189,7 @@
 
             option6= {
                 title: {
-                    text: '一级部门参训数据',
+                    text: filterapartment[1],
                     left: 'center'
                 },
                 tooltip: {
