--- a/index3.html
+++ b/index3.html
@@ -336,6 +336,7 @@
                 series: [{
                     data: persentSystem1,
                     type: 'bar',
+                    barWidth:25,
                     itemStyle:{
                         color: function(params){
                             console.log(params)
@@ -389,6 +390,7 @@
                 series: [{
                     data: persentSystem2,
                     type: 'bar',
+                    barWidth:25,
                     itemStyle:{
                         color: function(params){
                             console.log(params)
@@ -445,6 +447,7 @@
                 series: [{
                     data: persentSystem3,
                     type: 'bar',
+                    barWidth:25,
                     itemStyle:{
                         color: function(params){
                             console.log(params)
@@ -500,6 +503,7 @@
                 series: [{
                     data: persentSystem4,
                     type: 'bar',
+                    barWidth:25,
                     itemStyle:{
                         color: function(params){
                             console.log(params)
