--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./js/world.js"></script>
     <script src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/vue.js"></script>
+    <script>setTimeout(function(){location.href="index2.html"},900000);</script>
     <!-- 引入组件库 -->
     <meta charset="utf-8" />
     <title></title>
