--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<!-- 引入组件库 -->
 	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+	<script>setTimeout(function(){location.href="index3.html"},900000);</script>
 	<meta charset="utf-8" />
 	<title></title>
 </head>
