--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,8 @@
 	<script type="text/javascript" src="./js/vue.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<!-- 引入组件库 -->
-	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script>setTimeout(function(){location.href="index1.html"},900000);</script>
 	<meta charset="utf-8" />
 	<title></title>
 </head>
