--- a/index1.html
+++ b/index1.html
@@ -318,6 +318,9 @@
     #app {
         width: 100%;
         height: 96%;
+		background-image:url('./img/bg.png');
+		background-repeat: no-repeat;
+		background-size:100%
     }
 
     .content {
