--- a/index1.html
+++ b/index1.html
@@ -23,24 +23,24 @@
                 <div id="number" class="number" style='width:446px'></div>
                 <input type="hidden" id="hdnum" value="12345"/>
                 <div class='circle1'>
-                    <span style='display:block;font-weight:bold;font-size:18px'>{{satisficition}}%</span>
-                    <span style='font-size:18px;margin-top:15px;display:block;'>满意度</span>
+                    <span style='display:block;font-weight:bold;font-size:22px'>{{satisficition}}%</span>
+                    <span style='font-size:16px;margin-top:15px;display:block;'>满意度</span>
                 </div>
                 <div class='circle2'>
-                        <span style='display:block;font-weight:bold;font-size:18px'>{{workingHours}}</span>
-                        <span style='font-size:18px;margin-top:20px;display:block'>时长</span>
+                        <span style='display:block;font-weight:bold;font-size:22px'>{{workingHours}}</span>
+                        <span style='font-size:16px;margin-top:20px;display:block'>时长</span>
                 </div>
                 <div class='circle3'>
-                        <span style='display:block;font-weight:bold;font-size:18px'>{{peopleCount}}</span>
-                        <span style='font-size:18px;margin-top:45px;display:block'>人数</span>
+                        <span style='display:block;font-weight:bold;font-size:22px'>{{peopleCount}}</span>
+                        <span style='font-size:16px;margin-top:45px;display:block'>人数</span>
                 </div>
                 <div class='circle4'>
-                        <span style='display:block;font-weight:bold;font-size:18px'>{{lessonCount}}</span>
-                        <span style='font-size:18px;margin-top:20px;display:block'>课程</span>
+                        <span style='display:block;font-weight:bold;font-size:22px'>{{lessonCount}}</span>
+                        <span style='font-size:16px;margin-top:20px;display:block'>课程</span>
                 </div>
                 <div class='circle5'>
-                        <span style='display:block;font-weight:bold;font-size:18px'>{{classCount}}</span>
-                        <span style='font-size:18px;margin-top:20px;display:block'>场次</span>
+                        <span style='display:block;font-weight:bold;font-size:22px'>{{classCount}}</span>
+                        <span style='font-size:16px;margin-top:20px;display:block'>场次</span>
                 </div>
              </div>
              <div class='content-bottom'>
@@ -477,10 +477,10 @@
         border-radius:50%;
         position: absolute;
         top:15%;
-        left:15%;
+        left:20%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#18D764,#000000);
+        background: radial-gradient(circle at 70px 70px,#00ff00,#ccc000);
     }
     .circle2{
         width:70px;
@@ -489,11 +489,11 @@
         
         border-radius:50%;
         position: absolute;
-        top: 40%;
-        left: 20%;
+        top: 45%;
+        left: 30%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,orange,#000000);
+        background: radial-gradient(circle at 70px 70px,#FFFF00,#EE82EE);
     }
     .circle3{
         width: 100px;
@@ -503,10 +503,11 @@
         border-radius: 50%;
         position: absolute;
         top: 50%;
-        left: 35%;
+        left: 50%;
         padding: 1%;
+        transform:translateX(-50%);
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,red,#000000);
+        background: radial-gradient(circle at 70px 70px,red,#660033);
     }
     .circle4{
         width: 70px;
@@ -514,11 +515,11 @@
         text-align: center;
         border-radius: 50%;
         position: absolute;
-        top: 53%;
-        left: 60%;
+        top: 45%;
+        left: 65%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#00FFFF,#000000);
+        background: radial-gradient(circle at 70px 70px,#33ffff,#660066);
     }
     .circle5{
         width: 70px;
@@ -527,11 +528,11 @@
        
         border-radius: 50%;
         position: absolute;
-        top: 20%;
+        top: 15%;
         left: 75%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#AE33CC,#000000);
+        background: radial-gradient(circle at 70px 70px,#ff33ff,#330066);
     }
     .echart_out{
         flex:1;
