--- a/index3.html
+++ b/index3.html
@@ -685,6 +685,13 @@
                         formatter: '{value}',
                         show:false
                     },
+                    splitLine :{    //网格线
+                        lineStyle:{
+                            color: ['#315070'],
+                            type:'dashed'    //设置网格线类型 dotted：虚线   solid:实线
+                        },
+                        show:true //隐藏或显示
+                    },          
                     axisLine:{
                         show:true, //隐藏坐标轴
                         lineStyle:{
@@ -905,6 +912,13 @@
                         formatter: '{value}',
                         show:false
                     },
+                    splitLine :{    //网格线
+                        lineStyle:{
+                            color: ['#315070'],
+                            type:'dashed'    //设置网格线类型 dotted：虚线   solid:实线
+                        },
+                        show:true //隐藏或显示
+                    }, 
                     axisTick:{
                         lineStyle:{color:'rgb(150,150,150)'}    // x轴刻度的颜色
                         }, 
@@ -1133,6 +1147,13 @@
                         formatter: '{value}',
                         show:false
                     },
+                    splitLine :{    //网格线
+                        lineStyle:{
+                            color: ['#315070'],
+                            type:'dashed'    //设置网格线类型 dotted：虚线   solid:实线
+                        },
+                        show:true //隐藏或显示
+                    }, 
                     axisLine:{
                         show:true, //隐藏坐标轴
                         lineStyle:{
@@ -1356,6 +1377,13 @@
                         formatter: '{value}',
                         show:false
                     },
+                    splitLine :{    //网格线
+                        lineStyle:{
+                            color: ['#315070'],
+                            type:'dashed'    //设置网格线类型 dotted：虚线   solid:实线
+                        },
+                        show:true //隐藏或显示
+                    }, 
                     axisLine:{
                         show:true, //隐藏坐标轴
                         lineStyle:{
