--- a/index1.html
+++ b/index1.html
@@ -27,20 +27,20 @@
                     <span style='font-size:16px;margin-top:15px;display:block;'>满意度</span>
                 </div>
                 <div class='circle2'>
-                        <span style='display:block;font-weight:bold;font-size:22px'>{{workingHours}}</span>
-                        <span style='font-size:16px;margin-top:20px;display:block'>时长</span>
+                        <span style='display:block;font-weight:bold;font-size:32px'>{{workingHours}}</span>
+                        <span style='font-size:16px;margin-top:10px;display:block'>时长</span>
                 </div>
                 <div class='circle3'>
-                        <span style='display:block;font-weight:bold;font-size:22px'>{{peopleCount}}</span>
-                        <span style='font-size:16px;margin-top:45px;display:block'>人数</span>
+                        <span style='display:block;font-weight:bold;font-size:32px'>{{peopleCount}}</span>
+                        <span style='font-size:16px;margin-top:20px;display:block'>人数</span>
                 </div>
                 <div class='circle4'>
-                        <span style='display:block;font-weight:bold;font-size:22px'>{{lessonCount}}</span>
-                        <span style='font-size:16px;margin-top:20px;display:block'>课程</span>
+                        <span style='display:block;font-weight:bold;font-size:32px'>{{lessonCount}}</span>
+                        <span style='font-size:16px;margin-top:10px;display:block'>课程</span>
                 </div>
                 <div class='circle5'>
-                        <span style='display:block;font-weight:bold;font-size:22px'>{{classCount}}</span>
-                        <span style='font-size:16px;margin-top:20px;display:block'>场次</span>
+                        <span style='display:block;font-weight:bold;font-size:32px'>{{classCount}}</span>
+                        <span style='font-size:16px;margin-top:10px;display:block'>场次</span>
                 </div>
              </div>
              <div class='content-bottom'>
@@ -480,7 +480,7 @@
         left:20%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#00ff00,#ccc000);
+        background: radial-gradient(circle at 70px 70px,#479e6f,#39815a);
     }
     .circle2{
         width:70px;
@@ -493,7 +493,7 @@
         left: 30%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#FFFF00,#EE82EE);
+        background: radial-gradient(circle at 70px 70px,#f4af66,#ee8038);
     }
     .circle3{
         width: 100px;
@@ -507,7 +507,7 @@
         padding: 1%;
         transform:translateX(-50%);
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,red,#660033);
+        background: radial-gradient(circle at 70px 70px,#e96855,#c43320);
     }
     .circle4{
         width: 70px;
@@ -519,7 +519,7 @@
         left: 65%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#33ffff,#660066);
+        background: radial-gradient(circle at 70px 70px,#4a97f6,#2972f6);
     }
     .circle5{
         width: 70px;
@@ -532,7 +532,7 @@
         left: 75%;
         padding: 1%;
         color:#fff;
-        background: radial-gradient(circle at 70px 70px,#ff33ff,#330066);
+        background: radial-gradient(circle at 70px 70px,#9a86f3,#5b42f2);
     }
     .echart_out{
         flex:1;
