--- a/index3.html
+++ b/index3.html
@@ -1529,7 +1529,6 @@
         height: 100%;
         background-image:url('./img/bg.png');
 		background-repeat: no-repeat;
-		background-size:100%
 	}
 
 	* {
@@ -1539,21 +1538,25 @@
 
 	#app {
 		width: 100%;
-		height: 100%
+        height: 100%;
+        overflow: hidden;
 	}
 	.content {
-    
+        background-image:url('./img/bg.png');
+        background-repeat: no-repeat;
         width:100%;
-        height:100%
+        height:96%;
+        margin-top:4%
 	}
     .content_Top{
         width:100%;
-        height:48%;
-        display:flex
+        height:50%;
+        display:flex;
+        
     }
     .content_Bottom{
         width:100%;
-        height:48%;
+        height:50%;
         display:flex
     }
     .echart_picture{
