--- a/index3.html
+++ b/index3.html
@@ -21,25 +21,25 @@
 	<div id='app'>
         <div class='content'>
             <div class='content_Top'>
-                <div class='echart_picture'>
-                        <div id="main1" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;float:left'>
+                        <div id="main1" style="width:100%;height:100%;"></div>
                 </div>
-                <div class='echart_picture'>
-                        <div id="main2" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;float:left'>
+                        <div id="main2" style="width:100%;height:100%;"></div>
                 </div>
-                <div class='echart_picture'>
-                        <div id="main3" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;margin-right:2.5%;float:left'>
+                        <div id="main3" style="width:100%;height:100%;"></div>
                 </div>
             </div>
             <div class='content_Bottom'>
-                <div class='echart_picture'>
-                        <div id="main4" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;float:left'>
+                        <div id="main4" style="width:100%;height:100%;"></div>
                 </div>
-                <div class='echart_picture'>
-                        <div id="main5" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;float:left'>
+                        <div id="main5" style="width:100%;height:100%;"></div>
                 </div>
-                <div class='echart_picture'>
-                        <div id="main6" style="width:400px;height:400px;"></div>
+                <div class='echart_picture' style='width:30%;margin-left:2.5%;float:left;margin-right:2.5%;'>
+                        <div id="main6" style="width:100%;height:100%;"></div>
                 </div>
             </div>
         </div>
@@ -683,7 +683,7 @@
                             color:'#fff',  //坐标的字体颜色
                         },
                         formatter: '{value}',
-                        show:false
+                        show:true
                     },
                     splitLine :{    //网格线
                         lineStyle:{
@@ -910,7 +910,7 @@
                             color:'#fff',  //坐标的字体颜色
                         },
                         formatter: '{value}',
-                        show:false
+                        show:true
                     },
                     splitLine :{    //网格线
                         lineStyle:{
@@ -1145,7 +1145,7 @@
                             color:'#fff',  //坐标的字体颜色
                         },
                         formatter: '{value}',
-                        show:false
+                        show:true
                     },
                     splitLine :{    //网格线
                         lineStyle:{
@@ -1375,7 +1375,7 @@
                             color:'#fff',  //坐标的字体颜色
                         },
                         formatter: '{value}',
-                        show:false
+                        show:true
                     },
                     splitLine :{    //网格线
                         lineStyle:{
@@ -1551,17 +1551,14 @@
     .content_Top{
         width:100%;
         height:50%;
-        display:flex;
         
     }
     .content_Bottom{
         width:100%;
         height:50%;
-        display:flex
     }
     .echart_picture{
-
-        flex:1
+        height:100%
     }
 </style>
 
