--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,9 @@
 
 <head>
 
-	<!--引入js-->
+    <!--引入js-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<script src='https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js'></script>
 	<script type="text/javascript" src="./js/china.js"></script>
 	<script type="text/javascript" src="./js/world.js"></script>
