--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <!--引入js-->
     <script src='https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js'></script>
     <script type="text/javascript" src="./js/china.js"></script>
