--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 <head>
 
 	<!--引入js-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<script src='https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js'></script>
 	<script type="text/javascript" src="./js/china.js"></script>
 	<script type="text/javascript" src="./js/world.js"></script>
