--- a/index1.html
+++ b/index1.html
@@ -218,8 +218,8 @@
                         smooth: true,
                         lineStyle: {
                             normal: {
-                                width: 5,
-                                color: '#47D8BE',
+                                width: 2,
+                                color: '#0286ff',
                                 shadowColor: 'rgba(71,216,190, 0.5)',
                                 shadowBlur: 10,
                                 shadowOffsetY: 7
@@ -270,8 +270,8 @@
                         smooth: true,
                         lineStyle: {
                             normal: {
-                                width: 5,
-                                color: '#47D8BE',
+                                width: 2,
+                                color: '#0286ff',
                                 shadowColor: 'rgba(71,216,190, 0.5)',
                                 shadowBlur: 10,
                                 shadowOffsetY: 7
@@ -322,8 +322,8 @@
                         smooth: true,
                         lineStyle: {
                             normal: {
-                                width: 5,
-                                color: '#47D8BE',
+                                width: 2,
+                                color: '#0286ff',
                                 shadowColor: 'rgba(71,216,190, 0.5)',
                                 shadowBlur: 10,
                                 shadowOffsetY: 7
@@ -374,8 +374,8 @@
                         smooth: true,
                         lineStyle: {
                             normal: {
-                                width: 5,
-                                color: '#47D8BE',
+                                width: 2,
+                                color: '#0286ff',
                                 shadowColor: 'rgba(71,216,190, 0.5)',
                                 shadowBlur: 10,
                                 shadowOffsetY: 7
