--- a/index2.html
+++ b/index2.html
@@ -134,7 +134,7 @@
 			companyCount:'',
 			newJoinCount:'',
 			scrollList1:[
-				{className:'工业标准服务器和软硬件基础初级培训'},
+				{className:'课程详情'},
 				{className:'课程详情'},
 				{className:'课程详情'},
 				{className:'课程详情'},
@@ -144,7 +144,7 @@
 				{className:'课程详情'},
 			],
 			scrollList2:[
-			{className:'工业标准服务器和软硬件基础初级培训'},
+			{className:'课程详情'},
 			{className:'课程详情'},
 			{className:'课程详情'},
 			{className:'课程详情'},
@@ -864,9 +864,9 @@
 					geo: {
 						show: true,
 						map: mapName,
-						layoutCenter:['50%','40%'],
+						layoutCenter:['50%','42%'],
 						layoutSize:650,
-						zoom: 1,  
+						zoom: 1.05,  
 						label: {
 							normal: {
 								show: false
@@ -911,8 +911,8 @@
 					{
 						name: 'iphone4',
 						type: 'map',
-						zoom: 1,   
-						layoutCenter:['50%','40%'],
+						zoom: 1.05,   
+						layoutCenter:['50%','42%'],
 						layoutSize:650,
 						mapType: 'china',
 						roam: false,
@@ -1206,15 +1206,15 @@
 			float:left
 		}
 		.content_top_center{
-			width:50%;
+			width:47.5%;
 			height:100%;
 			margin-left:2.5%;
-			float:left
+			float:left;
+
 		}
 		.content_top_right{
-			width:20%;
+			width:25%;
 			height:100%;
-			margin-left:2.5%;
 			float:left;
 			margin-right:2.5%
 		}
@@ -1235,15 +1235,17 @@
 			width:30%;
 			height:100%;
 			margin-left:2.5%;
-			float:left
+			float:left;
+
 		}
 		.content_bottom_right{
-			width:20%;
+			width:25%;
 			height:100%;
-			margin-left:12.5%;
+			margin-left:7.5%;
 			float:left;
 			margin-right:2.5%;
 			position: relative;
+
 		}
 		.content_top_right_1{
 			height:50%;
