--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,8 @@
 	<script src='https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js'></script>
 	<script type="text/javascript" src="./js/china.js"></script>
 	<script type="text/javascript" src="./js/world.js"></script>
-	<script src="./js/jquery.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/url.js"></script>
 	<script type="text/javascript" src="./js/vue.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<!-- 引入组件库 -->
@@ -76,7 +77,7 @@
 		getdata(){
             var that = this
 			$.ajax({
-                url: 'http://47.105.195.101:9090/getThirdPageData',
+                url: urlPath+'getThirdPageData',
                 dataType: 'json',
                 method: 'post',
                 data: '',
