--- a/index1.html
+++ b/index1.html
@@ -29,19 +29,23 @@
                     <span style='font-size:16px;margin-top:15px;display:block;'>满意度</span>
                 </div>
                 <div class='circle2'>
-                        <span style='display:block;font-weight:bold;font-size:32px;text-align:center'>{{workingHours}}</span>
+                        <span style='display: block;
+                        font-weight: bold;
+                        font-size: 30px;
+                        text-align: center;
+                        padding-right: 5%;'>{{workingHours}}</span>
                         <span style='font-size:16px;margin-top:10px;display:block'>时长</span>
                 </div>
                 <div class='circle3'>
-                        <span style='display:block;font-weight:bold;font-size:32px;margin-top: 5px'>{{peopleCount}}</span>
+                        <span style='display:block;font-weight:bold;font-size:30px;margin-top: 5px'>{{peopleCount}}</span>
                         <span style='font-size:16px;margin-top:20px;display:block'>人数</span>
                 </div>
                 <div class='circle4'>
-                        <span style='display:block;font-weight:bold;font-size:32px'>{{lessonCount}}</span>
+                        <span style='display:block;font-weight:bold;font-size:30px'>{{lessonCount}}</span>
                         <span style='font-size:16px;margin-top:10px;display:block'>课程</span>
                 </div>
                 <div class='circle5'>
-                        <span style='display:block;font-weight:bold;font-size:32px'>{{classCount}}</span>
+                        <span style='display:block;font-weight:bold;font-size:30px'>{{classCount}}</span>
                         <span style='font-size:16px;margin-top:10px;display:block'>场次</span>
                 </div>
              </div>
