--- a/index3.html
+++ b/index3.html
@@ -6,15 +6,13 @@
     <!--引入js-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<script src='https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js'></script>
+	<script src='./js/echarts.min.js'></script>
 	<script type="text/javascript" src="./js/china.js"></script>
 	<script type="text/javascript" src="./js/world.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/url.js"></script>
 	<script type="text/javascript" src="./js/vue.js"></script>
-	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<!-- 引入组件库 -->
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <script>setTimeout(function(){location.href="index1.html"},900000);</script>
 	<meta charset="utf-8" />
 	<title></title>
