--- a/index3.html
+++ b/index3.html
@@ -623,6 +623,7 @@
                         color: '#ffffff'//字体颜色
                     },
                 },
+                color: ['#fff','#0286ff'],
                 xAxis: [{
                     type: 'category',
                     axisTick:{
@@ -853,6 +854,7 @@
                         color: '#ffffff'//字体颜色
                     },
                 },
+                color: ['#fff','#0286ff'],
                 xAxis: [{
                     type: 'category',
                     axisTick:{
@@ -1082,6 +1084,7 @@
                         color: '#ffffff'//字体颜色
                     },
                 },
+                color: ['#fff','#0286ff'],
                 xAxis: [{
                     type: 'category',
                     axisTick:{
@@ -1312,6 +1315,7 @@
                         color: '#ffffff'//字体颜色
                     },
                 },
+                color: ['#fff','#0286ff'],
                 xAxis: [{
                     type: 'category',
                     axisTick:{
