--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
                 <div id="number" class="number" style='width:446px'></div>
                 <input type="hidden" id="hdnum" value="12345"/>
                 <div class='circle1'>
-                    <span style='display:block;font-weight:bold;font-size:22px'>{{satisficition}}%</span>
+                    <span style='display:block;font-weight:bold;font-size:22px'>{{satisficition}}</span>
                     <span style='font-size:16px;margin-top:15px;display:block;'>满意度</span>
                 </div>
                 <div class='circle2'>
